@@ -4,9 +4,14 @@ Send suggestions, questions, threats, etc. for this list to Matt[mailto:matt@dig
 
 === To Do
 
-* Schedule tutorial
+* Fix REWeek so that ordinal day values where the end day < start day does not 
+  fail
+
+* Rename unit tests to reflect new class names
 
 * Make Schedule a Module instead of a class
+
+* Schedule tutorial
 
 * Better RDoc's which include usage examples
 
