@@ -41,30 +41,30 @@ class DateRangeTest < Test::Unit::TestCase
     r_start = PDate.minute(1984,8,31,22,00)
     r_end = PDate.minute(1984,9,15,0,2)
     range = DateRange.new(r_start,r_end)
-		assert(-1==(range<=>(DateRange.new(r_start+2,r_end+5))))
-		assert(1==(range<=>(DateRange.new(r_start-24,r_end+5))))
-		assert(0==(range<=>(DateRange.new(r_start,r_end))))
+    assert(-1==(range<=>(DateRange.new(r_start+2,r_end+5))))
+    assert(1==(range<=>(DateRange.new(r_start-24,r_end+5))))
+    assert(0==(range<=>(DateRange.new(r_start,r_end))))
   end
 
   def test_overlap
     r_start = PDate.month(2010,12)
     r_end = PDate.month(2011,12)
     range = DateRange.new(r_start,r_end)
-		o_start = PDate.month(2010,11)
+    o_start = PDate.month(2010,11)
     o_end = PDate.month(2012,2)
-		o_range = DateRange.new(o_start,o_end)
-		assert(range.overlap?(o_range))
-		assert(o_range.overlap?(range))
-		assert(o_range.overlap?(DateRange.new(r_start,o_end)))
-		assert(o_range.overlap?(DateRange.new(o_start,r_end)))
+    o_range = DateRange.new(o_start,o_end)
+    assert(range.overlap?(o_range))
+    assert(o_range.overlap?(range))
+    assert(o_range.overlap?(DateRange.new(r_start,o_end)))
+    assert(o_range.overlap?(DateRange.new(o_start,r_end)))
   end
 
   def test_empty
     r_start = PDate.hour_of_day(2004,2,10,0)
     r_end = PDate.hour_of_day(2004,2,9,23)
     empty_range = DateRange.new(r_start,r_end)
-		assert(empty_range.empty?)
-		assert(DateRange::EMPTY.empty?)
+    assert(empty_range.empty?)
+    assert(DateRange::EMPTY.empty?)
   end
 
   def test_gap
@@ -73,12 +73,10 @@ class DateRangeTest < Test::Unit::TestCase
     range = DateRange.new(r_start,r_end)
     g_start = PDate.day_of_month(2000,6,18)
     g_end = PDate.day_of_month(2000,6,20)
-		g_range = DateRange.new(g_start,g_end)
+    g_range = DateRange.new(g_start,g_end)
     the_gap=range.gap(g_range)
     assert(the_gap.start_expr==(r_end+1))
     assert(the_gap.end_expr==(g_start-1))
   end
-
-
 
 end
