@@ -2,6 +2,8 @@
 
 == Version 0.2.0
 
+* Fixed Schedule class
+* Renamed Schedule#is_occurring? to Schedule#include?
 * RAA deployment
 * GEM deployment
 
